# signal.ai-v2

./: .gitignore  PRIVACY.md
signal-ai/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt
signal-ai/agents/audio/: __init__.py  audio_agent.py
signal-ai/agents/conversation/: __init__.py  conversation_agent.py
signal-ai/agents/formatter/: __init__.py  formatter_agent.py
signal-ai/agents/graph/: __init__.py  state.py  workflow.py
signal-ai/agents/intent/: __init__.py  intent_agent.py
signal-ai/agents/memory/: __init__.py  memory_agent.py
signal-ai/agents/search/: __init__.py  web_search_agent.py
signal-ai/agents/social/: __init__.py  facebook_agent.py  linkedin_agent.py  twitter_agent.py
signal-ai/agents/summarizer/: __init__.py  summarizer_agent.py
signal-ai/api/: __init__.py  main.py
signal-ai/api/dependencies/: __init__.py  auth.py  db.py  rate_limit.py
signal-ai/api/routes/: __init__.py  admin.py  auth.py  chat.py  social.py  webhooks.py
signal-ai/api/schemas/: __init__.py  request.py  response.py
signal-ai/api/static/: index.html
signal-ai/core/: __init__.py  config.py  exceptions.py  security.py
signal-ai/deployments/docker/: Dockerfile  __init__.py
signal-ai/infrastructure/: __init__.py
signal-ai/infrastructure/database/: __init__.py  models.py  mongodb.py  mongodb_client.py  postgres.py
signal-ai/infrastructure/messaging/: __init__.py  kafka.py
signal-ai/infrastructure/monitoring/: logging.py  metrics.py
signal-ai/scripts/: health_check.py  migrate_db.py  seed_data.py
signal-ai/services/auth/: __init__.py  oauth_service.py  token_manager.py
signal-ai/services/cache/: __init__.py  memory.py  redis.py  session_manager.py
signal-ai/services/llm/: __init__.py  base.py  ollama.py  openai.py  router.py
signal-ai/services/oauth/: __init__.py  oauth_service.py
signal-ai/services/queue/: __init__.py  celery_app.py  tasks.py
signal-ai/services/search/: __init__.py  search_service.py
signal-ai/services/social/: __init__.py  base.py  facebook.py  linkedin.py  twitter.py
signal-ai/tests/unit/: test_llm_services.py
(+34 files in other folders)
